# shazamio-core

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  test.sh
.github/workflows/: CI.yml
docker/: Dockerfile.manylinux_2_28_ARM64  Dockerfile.manylinux_2_28_X64  Dockerfile.u2004  install-basic-deps-manylinux.sh  install-basic-deps-u2004.sh
shazamio_core/: __init__.py  shazamio_core.py  shazamio_core.pyi
src/: errors.rs  lib.rs  params.rs  response.rs  utils.rs
src/fingerprinting/: algorithm.rs  communication.rs  decode.rs  ffmpeg_wrapper.rs  mod.rs  resample.rs  signature_format.rs
