[tool.poetry]
name = "shazamio_core"
version = "1.1.1"
description = ""
authors = ["dotX12 <dev@shitposting.team>"]
readme = "README.md"
packages = [{include = "shazamio_core"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
maturin = "^1.8.1"

[build-system]
requires = ["maturin>=1.4.0"]
build-backend = "maturin"

[project]
name = "shazamio_core"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
bindings = "pyo3"
